Archive2/d6/4bc998421d7253/output
main.cpp: In function 'int main()':
main.cpp:8:7: error: expected primary-expression before 'int'
     f(int[]{1, 2, 3});
       ^
