Archive2/d6/4bc998421d7253/main.cpp
void f(int*)
{
}

int main()
{
    using T = int[];
    f(int[]{1, 2, 3});
}